--- a/secrets.yaml
+++ b/secrets.yaml
@@ -5,7 +5,10 @@ metadata:
   namespace: kube-system
 type: Opaque
 data:
-  username:  
+  username: 
   password: 
-  url:
-  tenant:  
+  oauthclientid: 
+  oauthsecret:  
+  oauthscope: 
+  oauthtoken: 
+  oauthupload: 
