--- a/configmap.yaml
+++ b/configmap.yaml
@@ -6,29 +6,42 @@ metadata:
   namespace: kube-system
 data:
   config: |
-    <match fluent.**>
-      @type null
-    </match>
+    <label @FLUENT_LOG>
+      <match fluent.**>
+       @type null
+      </match> 
+    </label>
     <source>
        @type tail
        @id in_tail_container_logs
        path /var/log/containers/*.log
-       #exclude_path ["/var/log/containers/envoy.**", "/var/log/containers/coredns.**"]
+       exclude_path ["/var/log/containers/omc.**"]
        pos_file /var/log/fluentd.log.pos
        path_key tailed_path
-       tag istio.*
-       read_from_head false
+       tag pod.*
+       read_from_head true
        refresh_interval 30
        <parse>
          @type json
        </parse>
     </source>
+    <filter pod.**>
+       @type record_transformer
+       enable_ruby true
+       <record>
+        message   ${record.to_json}
+        entityType omc_kubernetes_pod
+        entityName "KubernetesPod"
+        sourceName "PodLog"
+        logEntity "${record['tailed_path']}"
+       </record>
+    </filter>
     <source>
        @type systemd
        tag kubelet
        path /run/log/journal
        matches [{ "_SYSTEMD_UNIT": "kubelet.service" }]
-       read_from_head false
+       read_from_head true
 
        <storage>
         @type local
@@ -40,39 +53,47 @@ data:
         fields_lowercase true
        </entry>
     </source>
+    <filter kubelet>
+       @type record_transformer
+       enable_ruby true
+       <record>	
+        message    ${record.to_json}
+        entityType omc_kubernetes_cluster
+        entityName "OKEFluentd"
+        sourceName "KubeletLogs"
+        logEntity "${record['tailed_path']}"
+       </record>
+    </filter>
 
     <match kubelet>
-      @type http
-      endpoint "#{ENV['OMC_URL']}" 
-      #ssl_no_verify true  # default: false
-      http_method     post    # default: post
-      #content_type    application/octet-stream
-      headers {"X-USER-IDENTITY-DOMAIN-NAME":"#{ENV['OMC_TENANT']}", "X-User-Defined-Properties": "filename:Kuberneteslogs,uploadName:Kubernetes,entityName:Kubelet,entityType:Kubernetes Cluster,logSourceName:KubeletLogs","Content-Type":"application/octet-stream"}
-      <auth>
-        method basic
-        username "#{ENV['OMC_USER']}"
-        password "#{ENV['OMC_PASSWORD']}"
-      </auth>
+       @type oracle_omc_loganalytics                    
+       omc_oauth_client_id           "#{ENV['OMC_CLIENTID']}"
+       omc_oauth_client_secret       "#{ENV['OMC_SECRET']}"
+       omc_oauth_username            "#{ENV['OMC_USER']}"
+       omc_oauth_password            "#{ENV['OMC_PASSWORD']}"
+       omc_oauth_scope               "#{ENV['OMC_SCOPE']}"
+       omc_oauth_token_url           "#{ENV['OMC_TOKEN']}"
+       omc_oauth_upload_url          "#{ENV['OMC_UPLOAD']}"
+       <buffer tag>
+            @type file
+            path /var/log/fluentd/omckubeletbuffer
+            overflow_action block
+            disable_chunk_backup true
+       </buffer>	
     </match>
-    <match istio.**>
-      @type http
-      endpoint "#{ENV['OMC_URL']}" 
-      #ssl_no_verify true  # default: false
-      http_method     post    # default: post
-      headers {"X-USER-IDENTITY-DOMAIN-NAME":"#{ENV['OMC_TENANT']}", "X-User-Defined-Properties": "filename:Kuberneteslogs,uploadName:Kubernetes,entityName:Pod,entityType:Kubernetes Pod,logSourceName:PodLog","Content-Type":"application/octet-stream"}
-      <auth>
-        method basic
-        username "#{ENV['OMC_USER']}"
-        password "#{ENV['OMC_PASSWORD']}"
-      </auth>
-     # <buffer>
-      #  @type memory
-       # flush_thread_count 8 
-        #flush_interval 50s
-       # chunk_limit_size 1MB
-       # queue_limit_length 32
-       # retry_max_interval 30
-       # retry_forever true
-     # </buffer>
+    <match pod.**>
+       @type oracle_omc_loganalytics                    
+       omc_oauth_client_id           "#{ENV['OMC_CLIENTID']}"
+       omc_oauth_client_secret       "#{ENV['OMC_SECRET']}"
+       omc_oauth_username            "#{ENV['OMC_USER']}"
+       omc_oauth_password            "#{ENV['OMC_PASSWORD']}"
+       omc_oauth_scope               "#{ENV['OMC_SCOPE']}"
+       omc_oauth_token_url           "#{ENV['OMC_TOKEN']}"
+       omc_oauth_upload_url          "#{ENV['OMC_UPLOAD']}"
+       <buffer tag>
+            @type file
+            path /var/log/fluentd/omcpodbuffer
+            overflow_action block
+            disable_chunk_backup true
+       </buffer>
     </match>
-    
